--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
     font-size: 16px;
     color: var(--font-color);
     font-family: 'Montserrat', sans-serif;
@@ -24,15 +25,23 @@
 
 /*HEADER---------------------------------*/
 header {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    background-color: white;
-    box-shadow: 0px 0px 30px rgba(127,137,161,0.3);
-    padding: 15px 9%;
     position: fixed;
-    width: 83%;
-    z-index: 999;
+    top: 0;
+    left: 0;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    transition: 0.6s;
+    /*padding: 40px 100px;*/
+    padding: 30px 9%;
+    z-index: 1000;
+}
+
+header.sticky {
+    padding: 15px 9%;
+    box-shadow: 0px 0px 30px rgba(127,137,161,0.3);
+    background-color: white;
 }
 
 .logo {
@@ -41,60 +50,70 @@ header {
     margin-right: auto;
 }
 
-.active-nav-li {
-    color: var(--main-green);
-    border-bottom: 2px var(--main-green) solid;
+header ul {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-nav ul li {
+header ul li {
+    position: relative;
+    list-style: none;
+}
+
+header ul li a {
+    position: relative;
+    margin: 0 15px;
+    text-decoration: none;
+    color: #1f1d38;
+    transition: color 0.3s ease, border 0.5 ease;
     font-size: 14px;
     font-weight: 600;
+    padding: 0 3px 0 3px;
+}
+
+header ul li a:hover {
+    position: relative;
+    margin: 0 15px;
     text-decoration: none;
-    list-style: none;
-    display: inline;
-    padding: 0 5px 3px 5px;
-    margin: 0 10px;
-    cursor: pointer;
-    transition: border .1s ease-in, color ease .3s;
-    color: var(--font-color);
-    font-family: 'Open Sans', sans-serif;
+    color: #1bdc79;
+    padding-bottom: 5px;
+    border-bottom: #1bdc79 solid 2px;
 }
-
-nav ul li:hover {
-    color: var(--main-green);
-    border-bottom: 2px var(--main-green) solid;
-}
-
-nav ul li:last-child {
-    margin-right: 5px;
+ 
+.active-nav-li {
+    color: #1bdc79;
+    border-bottom: 2px #1bdc79 solid;
+    padding-bottom: 5px;
 }
 
 
 /* HOME SECTION----------------------------------*/
 /*MAIN------------------------------------*/
-.home-section .main {
+#home-section .main {
     background: url(images/wave.svg);
     background-color: var(--ghost-white);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: bottom;
     height: 300px;
-    padding: 140px 0 190px 9%;
+    padding: 290px 0 340px 9%;
     display: flex;
     align-items: center;
 }
 
-.home-section .main h1{
+#home-section .main h1{
     font-size: 52px;
     margin-bottom: 40px;
 }
 
-.home-section .main span {
+#home-section .main span {
     color: var(--main-green);
     font-size: 52px;
 }
 
-.home-section .main button {
+#home-section .main button {
     font-size: 14px;
     padding: 11px 34px;
     border: none;
@@ -106,12 +125,12 @@ nav ul li:last-child {
     transition: .3s all ease;
 }
 
-.home-section .main button:hover {
+#home-section .main button:hover {
     background-color: #16B663;
     transform: scale(1.1);
 }
 
-.home-section .main img {
+#home-section .main img {
     width: 600px;
     height: 505px;
     margin-left: 30px;
@@ -278,12 +297,18 @@ footer {
 }
 
 
+.about-us-section {
+    background-color: blue;
+}
 
+.sections {
+    transition: 0.5s;
+    display: none;
+}
 
-
-
-
-
+.sections.active {
+    display: block;
+}
 
 
 
