--- a/styles.css
+++ b/styles.css
@@ -264,7 +264,6 @@ header ul li a:hover {
     font-size: 18px;
     padding: 3px 239px 3px 5px;
     margin-bottom: 12px;
-    color: #dce1ec;
     border: solid 1px black;
 }
 
@@ -281,7 +280,7 @@ header ul li a:hover {
 .newsletter button:hover {
     background-color: var(--font-color);
     color: white;
-    transform: scale(1.1);
+    transform: scale(1.05);
 }
 
 /*FOOTER--------------------------------------*/
@@ -785,6 +784,134 @@ footer {
     background-color: #139F57;
     transform: scale(1.04);
 }
+
+
+
+
+
+/*----------------------------------------------*/
+/*MEDIA QUERIES---------------------------------*/
+/*----------------------------------------------*/
+
+/*TABLETS---------------------------------------*/
+@media only screen
+and (max-width: 768px)
+and (orientation: portrait) {
+    /*HOME SECTION------------------------------*/
+    /*HEADER------------------------------------*/
+    header {
+        display: flex;
+        justify-content: flex-end;
+        padding: 30px 7%;
+    }
+
+    header.sticky {
+        padding: 15px 7%;
+    }
+
+    .logo {
+        height: 40px;
+        width: 239px;
+    }
+
+    header ul li a {
+        font-size: 12px;
+    }
+
+    /*MAIN--------------------------------------*/
+    .main-right {
+        display: none;
+    }
+
+    /*WHY CHOOSE US----------------------------------------*/
+    .why-choose-us-div {
+        padding: 60px 10% 40px 10%;
+    }
+
+    .why-choose-us-left {
+        width: 100%;
+    }
+
+    .why-choose-us-left h3 {
+        text-align: center;
+        margin-bottom: 37px;
+    }
+
+    .why-choose-us-left p {
+        text-align: left;
+        padding-right: 0;
+    }
+
+    .why-choose-us-left-imgs {
+        margin: 20px 0;
+    }
+
+    .why-choose-us-left-imgs p {
+        font-size: 21px;
+        font-weight: 600;
+    }
+
+    .why-choose-us-left-imgs img {
+        height: 46px;
+        width: 46px;
+        margin-right: 15px;
+    }
+
+    .why-choose-us-right {
+        display: none;
+
+    }
+
+    /*NEWSLETTER----------------------------------*/
+    .newsletter {
+        padding: 60px 0;
+    }
+
+    .newsletter input {
+        padding: 3px 218px 3px 5px;
+    }
+
+    /*OUR CLIENTS---------------------------------*/
+    .our-clients-div {
+        padding: 60px 0 50px 0;
+    }
+    
+    .our-clients-imgs-div {
+        flex-wrap: wrap;
+        padding-left: 4%;
+        padding-right: 4%;
+    }
+    
+    .our-clients-div h3 {
+        margin-bottom: 37px;
+    }
+    
+    .our-clients-imgs {
+        margin: 10px 20px;
+    }
+
+    /*FOOTER-------------------------------------*/
+    #home-section footer {
+        padding-bottom: 30px;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
