--- a/styles.css
+++ b/styles.css
@@ -321,8 +321,6 @@ footer {
     padding: 150px 10% 50px 9%;
     display: flex;
     align-items: center;
-    /*height: 300px;
-    width: 100%;*/
 }
 
 .about-us-div-left {
@@ -893,6 +891,91 @@ and (orientation: portrait) {
     /*FOOTER-------------------------------------*/
     #home-section footer {
         padding-bottom: 30px;
+    }
+    
+
+    /*ABOUT US SECTION----------------------------------*/
+    /*ABOUT US DIV------------------------------------*/
+    .about-us-div {
+        padding: 175px 10% 30px 9%;
+    }
+
+    .about-us-div-left {
+        display: none;
+    } 
+
+    .about-us-div-right {
+        width: 100%;
+    }
+
+    .about-us-div-right h3 {
+        padding-bottom: 28px;
+        text-align: center;
+    }
+
+    .about-us-div-right p {
+        margin-bottom: 0;
+    }
+
+    /*SERVICES-------------------------------------*/
+    .services h3 {
+        margin-bottom: 28px;
+    }
+
+    .services-grid {
+        display: grid;
+        grid-column: repeat(2, 1fr);
+        grid-row: repeat(3, 1fr);
+        gap: 30px;
+    }
+
+    .services-grid-panel-1 {
+        grid-column: 1;
+        grid-row: 1;
+    }
+    
+    .services-grid-panel-2 {
+        grid-column: 2;
+        grid-row: 1;
+    }
+    
+    .services-grid-panel-3 {
+        grid-column: 1;
+        grid-row: 2;
+    }
+    
+    .services-grid-panel-4 {
+        grid-column: 2;
+        grid-row: 2;
+    }
+    
+    .services-grid-panel-5 {
+        grid-column: 1;
+        grid-row: 3;
+    }
+    
+    .services-grid-panel-6 {
+        grid-column: 2;
+        grid-row: 3;
+    }
+
+    .services-grid-panel-1:hover,
+    .services-grid-panel-2:hover,
+    .services-grid-panel-3:hover,
+    .services-grid-panel-4:hover,
+    .services-grid-panel-5:hover,
+    .services-grid-panel-6:hover {
+        transform: scale(1.06);
+    }
+
+    /*OUR TEAM----------------------------------------*/
+    .our-team-container {
+        padding: 0 14%;
+    }
+
+    .our-team-img-1,
+    .our-team-img-2 {
+        margin-bottom: 50px;
     }
 }
 
