added smartphones media queries

--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,10 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Racing+Sans+One&display=swap');
 
+@import url('./tablet-media-queries.css');
+
+@import url('./smartphones-media-queries.css');
+
 :root {
     --main-green: #1bdc79;
     --font-color: #1f1d38;
@@ -785,462 +789,4 @@ footer {
 .invisible-div {
     display: none;
 }
-
-
-
-
-
-
-/*----------------------------------------------*/
-/*MEDIA QUERIES---------------------------------*/
-/*----------------------------------------------*/
-
-/*TABLETS---------------------------------------*/
-@media only screen
-and (max-width: 768px)
-and (orientation: portrait) {
-    /*HOME SECTION------------------------------*/
-    /*HEADER------------------------------------*/
-    header {
-        display: flex;
-        justify-content: flex-end;
-        padding: 30px 7%;
-    }
-
-    header.sticky {
-        padding: 15px 7%;
-    }
-
-    .logo {
-        height: 40px;
-        width: 239px;
-    }
-
-    header ul li a {
-        font-size: 12px;
-    }
-
-    /*MAIN--------------------------------------*/
-    .main-right {
-        display: none;
-    }
-
-    /*WHY CHOOSE US----------------------------------------*/
-    .why-choose-us-div {
-        padding: 60px 10% 40px 10%;
-    }
-
-    .why-choose-us-left {
-        width: 100%;
-    }
-
-    .why-choose-us-left h3 {
-        text-align: center;
-        margin-bottom: 37px;
-    }
-
-    .why-choose-us-left p {
-        text-align: left;
-        padding-right: 0;
-    }
-
-    .why-choose-us-left-imgs {
-        margin: 20px 0;
-    }
-
-    .why-choose-us-left-imgs p {
-        font-size: 21px;
-        font-weight: 600;
-    }
-
-    .why-choose-us-left-imgs img {
-        height: 46px;
-        width: 46px;
-        margin-right: 15px;
-    }
-
-    .why-choose-us-right {
-        display: none;
-
-    }
-
-    /*NEWSLETTER----------------------------------*/
-    .newsletter {
-        padding: 60px 0;
-    }
-
-    .newsletter input {
-        padding: 3px 218px 3px 5px;
-    }
-
-    /*OUR CLIENTS---------------------------------*/
-    .our-clients-div {
-        padding: 60px 0 50px 0;
-    }
-    
-    .our-clients-imgs-div {
-        flex-wrap: wrap;
-        padding-left: 4%;
-        padding-right: 4%;
-    }
-    
-    .our-clients-div h3 {
-        margin-bottom: 37px;
-    }
-    
-    .our-clients-imgs {
-        margin: 10px 20px;
-    }
-    
-
-    /*ABOUT US SECTION----------------------------------*/
-    /*ABOUT US DIV------------------------------------*/
-    .about-us-div {
-        padding: 175px 10% 30px 9%;
-    }
-
-    .about-us-div-left {
-        display: none;
-    } 
-
-    .about-us-div-right {
-        width: 100%;
-    }
-
-    .about-us-div-right h3 {
-        padding-bottom: 28px;
-        text-align: center;
-    }
-
-    .about-us-div-right p {
-        margin-bottom: 0;
-    }
-
-    /*SERVICES-------------------------------------*/
-    .services h3 {
-        margin-bottom: 28px;
-    }
-
-    .services-grid {
-        display: grid;
-        grid-column: repeat(2, 1fr);
-        grid-row: repeat(3, 1fr);
-        gap: 30px;
-    }
-
-    .services-grid-panel-1 {
-        grid-column: 1;
-        grid-row: 1;
-    }
-    
-    .services-grid-panel-2 {
-        grid-column: 2;
-        grid-row: 1;
-    }
-    
-    .services-grid-panel-3 {
-        grid-column: 1;
-        grid-row: 2;
-    }
-    
-    .services-grid-panel-4 {
-        grid-column: 2;
-        grid-row: 2;
-    }
-    
-    .services-grid-panel-5 {
-        grid-column: 1;
-        grid-row: 3;
-    }
-    
-    .services-grid-panel-6 {
-        grid-column: 2;
-        grid-row: 3;
-    }
-
-    .services-grid-panel-1:hover,
-    .services-grid-panel-2:hover,
-    .services-grid-panel-3:hover,
-    .services-grid-panel-4:hover,
-    .services-grid-panel-5:hover,
-    .services-grid-panel-6:hover {
-        transform: scale(1.06);
-    }
-
-    /*OUR TEAM----------------------------------------*/
-    .our-team-container {
-        padding: 0 14%;
-    }
-
-    .our-team-img-1,
-    .our-team-img-2 {
-        margin-bottom: 50px;
-    }
-
-
-    /*PRICING SECTION-----------------------------*/
-    .pricing-grid {
-        padding-left: 8%;
-        padding-right: 8%;
-    }
-    
-    .pricing-grid-panel-1,
-    .pricing-grid-panel-2,
-    .pricing-grid-panel-3,
-    .pricing-grid-panel-4 {
-        transition: 0.2s;
-    }
-    
-    .pricing-grid-panel-1:hover div,
-    .pricing-grid-panel-2:hover div,
-    .pricing-grid-panel-3:hover div,
-    .pricing-grid-panel-4:hover div {
-        transition: border 0.3s;
-    }
-    
-    .pricing-grid-panel-1 button,
-    .pricing-grid-panel-4 button {
-        margin-top: 20px;
-    }
-
-
-    /*CONTACT US SECTION--------------------------------------*/
-    #contact-us-section form {
-        padding: 70px 15% 60px 15%;
-    }
-
-    #contact-us-section textarea {
-        min-height: 140px;
-    }
-
-    #contact-us-section footer {
-        padding-top: 50px;
-        padding-bottom: 40px;
-    }
-}
-
-
-@media only screen
-and (max-width: 1024px)
-and (orientation: landscape) {
-    /*HOME SECTION--------------------------------*/
-    #home-section .main {
-        padding: 330px 0 340px 9%;
-    }
-
-    .why-choose-us-left p {
-        font-size: 18px;
-        padding-right: 80px;
-    }
-    
-    .why-choose-us-left-imgs {
-        margin: 20px 0;
-    }
-
-    .why-choose-us-left-imgs img {
-        height: 43px;
-        width: 43px;
-        margin-right: 15px;
-    }
-
-    .why-choose-us-left-imgs p {
-        font-size: 21px;
-    }
-
-    .our-clients-imgs {
-        margin: 0 8px;
-    }
-
-    .newsletter input {
-        padding: 3px 232px 3px 5px;
-        font-size: 17px;
-    }
-
-
-    /*ABOUT US SECTION----------------------------*/
-    /*SERVICES-------------------------------------*/
-    .services h3 {
-        margin-bottom: 25px;
-    }
-
-    .services-grid {
-        gap: 30px;
-        padding: 0 8%;
-    }
-
-    /*OUR TEAM------------------------------------*/
-    .our-team h3 {
-        margin-bottom: 47px;
-    }
-    
-    .our-team-container {
-        flex-wrap: nowrap;
-        padding: 0 5%;
-    }
-    
-    .our-team-img-1,
-    .our-team-img-2,
-    .our-team-img-3,
-    .our-team-img-4 {
-        height: 210px;
-        width: 210px;
-    }
-
-    .our-team-img-bottom {
-        height: 35%;
-    }
-
-    .our-team-img-1:hover .our-team-img-bottom,
-    .our-team-img-2:hover .our-team-img-bottom,
-    .our-team-img-3:hover .our-team-img-bottom,
-    .our-team-img-4:hover .our-team-img-bottom {
-        height: 50%;
-    }
-    
-    .our-team-img-bottom h6 {
-        font-size: 18px;
-    }
-
-    .our-team-img-bottom img {
-        height: 22px;
-        width: 22px;
-        margin: 50px 2px 0 2px;
-    }
-
-    /*PRICING SECTION-----------------------------*/
-    .pricing-grid {
-        padding-left: 7%;
-        padding-right: 7%;
-    }
-
-    .pricing-grid-panel-1,
-    .pricing-grid-panel-2,
-    .pricing-grid-panel-3,
-    .pricing-grid-panel-4 {
-        transition: 0.3s;
-    }
-    
-    .pricing-grid-panel-1:hover div,
-    .pricing-grid-panel-2:hover div,
-    .pricing-grid-panel-3:hover div,
-    .pricing-grid-panel-4:hover div {
-        transition: border 0.2s;
-    }
-    
-    .pricing-grid-panel-1 button,
-    .pricing-grid-panel-3 button,
-    .pricing-grid-panel-4 button {
-        margin-top: 20px;
-    }
-
-
-    /*CONTACT US SECTION--------------------------------------*/
-    #contact-us-section form {
-        padding: 70px 20% 60px 20%;
-    }
-}
-
-
-
-/*SMARTPHONES---------------------------------------*/
-@media only screen
-and (max-width: 480px)
-and (orientation: portrait) {
-    /*HOME SECTION--------------------------------*/
-    header .logo {
-        display: none;
-    }
-
-    header .logo-for-smartphones {
-        height: 40px;
-        width: 40px;
-        display: block;
-        margin-right: auto;
-    }
-
-    /*header .open {
-        display: block;
-        cursor: pointer;
-        width: 40px;
-        height: 40px;
-    }
-
-    header .close {
-        display: block;
-        cursor: pointer;
-        width: 40px;
-        height: 40px;
-    }*/
-
-
-    /*MAIN SECTION-------------------------------*/
-    .sections h3 {
-        font-size: 32px;
-    }
-
-    #home-section .main {
-        padding: 330px 0 285px 9%;
-    }
-
-    .why-choose-us-div {
-        padding: 65px 4% 60px 4%;
-    }
-
-    .why-choose-us-div p {
-        font-size: 16px;
-    }
-
-    .why-choose-us-left-imgs {
-        margin: 15px 0;
-    }
-
-    .why-choose-us-left-imgs img {
-        width: 40px;
-        height: 40px;
-    }
-
-    .why-choose-us-left-imgs p {
-        font-size: 17px;
-    }
-
-    /*NEWSLETTER---------------------------------------*/
-    .newsletter {
-        padding: 65px 0;
-    }
-
-    .newsletter h3 {
-        margin-bottom: 35px;
-    }
-
-    .newsletter p {
-        font-size: 17px;
-        padding: 0 1%;
-        margin-bottom: 25px;
-    }
-
-    .newsletter input {
-        font-size: 15px;
-        padding: 3px 22% 3px 5px;
-    }
-
-    .newsletter button {
-        font-size: 17px;
-        padding: 12px 30%;
-    }
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
