added smartphones media queries

--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Racing+Sans+One&display=swap');
 
-@import url('./tablet-media-queries.css');
+@import url('./tablets-media-queries.css');
 
 @import url('./smartphones-media-queries.css');
 
