--- a/smartphones-media-queries.css
+++ b/smartphones-media-queries.css
@@ -145,6 +145,7 @@ and (orientation: portrait) {
     /*OUR TEAM------------------------------------*/
     .our-team-container {
         padding: 0 14%;
+        justify-content: space-around;
     }
 
     .our-team-img-1,
