--- a/tablets-media-queries.css
+++ b/tablets-media-queries.css
@@ -1,3 +1,7 @@
+@import url('./styles.css');
+
+@import url('./smartphones-media-queries.css');
+
 /*----------------------------------------------*/
 /*MEDIA QUERIES---------------------------------*/
 /*----------------------------------------------*/
