--- a/styles.css
+++ b/styles.css
@@ -92,6 +92,10 @@ header ul li a:hover {
     padding-bottom: 5px;
 }
 
+.toggle {
+    display: none;
+}
+
 
 /* HOME SECTION----------------------------------*/
 /*MAIN------------------------------------*/
