--- a/smartphones-media-queries.css
+++ b/smartphones-media-queries.css
@@ -27,20 +27,23 @@ and (orientation: portrait) {
     header ul {
         position: absolute;
         top: 59px;
+        right: 0px;
         width: 100%;
-        height: 50vh;
+        height: 45vh;
         text-align: center;
         overflow: auto;
         background: #fff;
         visibility: hidden;
         opacity: 0;
+        display: none;
+        border-bottom: 1px solid var(--main-green);
     }
 
     header.MQactive ul {
         visibility: visible;
         opacity: 1;
         display: block;
-        padding-top: 60px;
+        padding-top: 90px;
     }
 
     header.MQactive ul li a.active-nav-li {
@@ -67,7 +70,7 @@ and (orientation: portrait) {
         padding-bottom: 0;
         padding-left: 8px;
         border-bottom: none;
-        border-left: solid 2px var(--main-green);
+        border-left: solid 3px var(--main-green);
         color: var(--main-green);
     }
 
